alterações na section depoimentos e no script.js na parte final

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="center">
             <div class="menu">
                 <div class="logo-menu">
-                    <a href="#"><img src="images/Agencia_Dev-removebg-preview.png" width="200"></a>
+                    <a href="#"><img src="images/AgenciaDev.png" width="200"></a>
                 </div>
                 <div class="items-menu">
                     <a href="#inicio">Início</a>
@@ -45,7 +45,7 @@
                 <br>
                 <p>E veja resultados expressivos dia após dia</p>
                 <br>
-                <img src="images/mockup.svg" alt="">
+                <img src="images/Desenvolvedores.png">
             </div><!-- Mockup -->
 
         </div><!-- Center -->
@@ -107,7 +107,7 @@
         <h2>Vamos começar seu projeto?</h2>
         <h4>Fale agora mesmo com um de nossos consultores!</h4>
         <br><br>
-        <a class="contact-btn" href="#">Entre em contato</a>
+        <a class="contact-btn" href="#contato">Entre em contato</a>
 
     </section><!-- cta -->
 
@@ -142,7 +142,7 @@
         <div class="center" style="display: block;">
             <div class="container-slider">
                 <div class="container-slider-single">
-                    <img src="images/DEPOIMENTO1.png">
+                    <img src="images/DEPOIMENTO1.png" width="200px">
                     <h3>Miriam Souza</h3>   
                     <p>O trabalho da Agência Dev foi fundamental para o nosso posicionamento e nossas 
                         estratégias de 2024. Juntos tivemos excelentes resultados e nossos clientes ficaram 
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="container-slider-single">
-                    <img src="images/DEPOIMENTO1.png">
+                    <img src="images/DEPOIMENTO2.png" width="200px">
                     <h3>Lucas Mendes</h3>
                     <p>Buscamos a Agência Dev para nos ajudar com campanhas de growth marketing focadas em um 
                         público extremamente específico. O produto teve faturamento maior que 300%.
@@ -162,7 +162,37 @@
                 </div>
 
                 <div class="container-slider-single">
-                    <img src="images/DEPOIMENTO1.png">
+                    <img src="images/DEPOIMENTO3.png" width="200px">
+                    <h3>Zaya Menphis</h3>
+                    <p>A estratégia de lançamento da marca não seria a mesma sem o trabalho comprometido da 
+                        Agência Dev. Obrigado ao Desenvolvedor Reginaldo que abraçou nossos desafios como 
+                        um de nós.
+                    </p>
+                    <img src="images/RATE.svg">
+                </div>
+
+                <div class="container-slider-single">
+                    <img src="images/DEPOIMENTO1.png" width="200px">
+                    <h3>Miriam Souza</h3>   
+                    <p>O trabalho da Agência Dev foi fundamental para o nosso posicionamento e nossas 
+                        estratégias de 2024. Juntos tivemos excelentes resultados e nossos clientes ficaram 
+                        surpresos com a qualidade. Foi um trabalho incrível feito à muitas mãos pela Uber e 
+                        pelo time da Agência Dev.
+                    </p>
+                    <img src="images/RATE.svg">
+                </div>
+
+                <div class="container-slider-single">
+                    <img src="images/DEPOIMENTO2.png" width="200px">
+                    <h3>Lucas Mendes</h3>
+                    <p>Buscamos a Agência Dev para nos ajudar com campanhas de growth marketing focadas em um 
+                        público extremamente específico. O produto teve faturamento maior que 300%.
+                    </p>
+                    <img src="images/RATE.svg">
+                </div>
+
+                <div class="container-slider-single">
+                    <img src="images/DEPOIMENTO3.png" width="200px">
                     <h3>Zaya Menphis</h3>
                     <p>A estratégia de lançamento da marca não seria a mesma sem o trabalho comprometido da 
                         Agência Dev. Obrigado ao Desenvolvedor Reginaldo que abraçou nossos desafios como 
@@ -177,17 +207,16 @@
 
     </section><!-- Depoimentos -->
 
-    <section id="contato" class="contato">
+    <section id="contato" class="contato"> 
         <h1>Entre em contato</h1>
         <div style="max-width: 600px;" class="center">
-            <form method="post">
-                <input type="text" placeholder="Digite seu nome...">
-                <input type="email" placeholder="Digite seu email...">
-                <textarea placeholder="Sua mensagem..."></textarea>
-                <input type="submit" name="acao" value="Enviar!">
+            <form onsubmit="enviarWhatsApp(event)">
+                <input type="text" id="nome" placeholder="Digite seu nome..." required>
+                <input type="email" id="email" placeholder="Digite seu email..." required>
+                <textarea id="mensagem" placeholder="Sua mensagem..." required></textarea>
+                <input type="submit" value="Enviar!">
             </form>
         </div><!-- center -->
-
     </section><!-- Contato -->
 
     <footer>
