adição de tags SEO e SMO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Agência Dev: Soluções criativas para alavancar seus resultados com marketing digital e tecnologia.">
+    <meta name="description" content="Agência Dev - Soluções criativas para alavancar seus resultados com marketing digital e tecnologia.">
+
+    <meta property="og:title" content="Agência Dev - Soluções criativas para alavancar seus resultados com marketing digital e tecnologia.">
+    <meta property="og:site_name" content="Agência Dev">
+    <meta property="og:description" content="Agência Dev - Soluções criativas para alavancar seus resultados com marketing digital e tecnologia.">
+    <meta property="og:url" content="https://agenciadev.vercel.app/">
+    <meta property="og:image" content="https://agenciadev.vercel.app/images/AgenciaDev.png">
+    <meta property="og:image:type" content="image/png">
 
     <title>Agência Dev</title>
 
@@ -14,6 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="./styles.css" />
+    
+    <link rel="icon" type="image/x-icon" href="images/AgenciaDev.png">
+
 </head>
 <body>
     <section class="main">
